--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-huggingface-hub==0.13.4
-matplotlib==3.7.1
-numpy==1.24.3
-pandas==1.5.3
-s3fs==2023.4.0
-streamlit==1.21.0
-tokenizers==0.13.3
-torch==2.0.0
-transformers==4.28.1
-wordcloud==1.8.2.2
+huggingface-hub>=0.13.4
+matplotlib>=3.7.1
+numpy>=1.24.3
+pandas>=1.5.3
+s3fs>=2023.4.0
+streamlit>=1.21.0
+tokenizers>=0.13.3
+torch>=2.0.0
+transformers>=4.36.0
+wordcloud>=1.8.2.2
